ViTables ChangeLog
==================
** October 08, 2013**
Fixed some white space inconsistencies in several modules.

** October 01, 2013**
Checking modules directly under the vitables package with pylint.

The package docbrowser has been analyzed with pylint.

The package h5db has been analyzed with pylint.

The package nodeprops has been analyzed with pylint.

The package vtwidgets has been analyzed with pylint.

The package vttables has been analyzed with pylint.

The package queries has been analyzed with pylint.

** September 30, 2013 **
The modules vtSite and vtGUI hav been renamed accordingly to PEP 8.

** September 29, 2013 **
The module dataSheet has been renamed accordingly to PEP 8.

The module scrollBar has been renamed accordingly to PEP 8.

The module leafView has been renamed accordingly to PEP 8.

The module leafModel has been renamed accordingly to PEP 8.

The module leafDelegate has been renamed accordingly to PEP 8.

The modules aboutPage have been renamed accordingly to PEP 8.

The modules aboutPage has been renamed accordingly to PEP 8.

The module configIOException has been renamed accordingly to PEP 8.

Some minor changes done.

Some changes that should have been added 2 commits ago :-(

Modules queriesManager and queryDlg have been renamed accordingly to PEP 8.

Modules in the nodeprops package have been renamed accordingly to PEP 8.

Modules in the h5db package have been renamed accordingly to PEP 8.

Modules in the docBrowser package have been renamed accordingly to PEP 8.

** September 28, 2013 **
The package vtWidgets has been renamed accordingly to PEP 8.

The package vtTables has been renamed accordingly to PEP 8.

The package nodeProperties has been renamed accordingly to PEP 8.

The package docBrowser has been renamed accordingly to PEP 8.

The module zoomCell has been renamed accordingly to PEP 8.

The module inputNodeName has been renamed accordingly to PEP 8.

** September 20, 2013 **